# iniparser

./: CMakeLists.txt  README.md
src/: Utility.cpp  iniparser.cpp  main.cpp
src/iniparser/: Utility.h  iniparser.h
